Fix focus styling for Expand all button
The box-shadow focus styles and relatively positioned items result in a
focused "Expand all" button having its box shadow appear behind the
first item.

--- a/packages/web-components/src/components/va-accordion/va-accordion.css
+++ b/packages/web-components/src/components/va-accordion/va-accordion.css
@@ -14,6 +14,9 @@
 }
 
 button {
+  /* The position and z-index are to keep the focus shadow above the first item */
+  position: relative;
+  z-index: 100;
   border: none;
   color: var(--color-link-default);
   background: transparent;
